Add first basic example

--- a/css.html
+++ b/css.html
@@ -1,7 +1,7 @@
 <!-- $title CSS -->
 <!-- @include _header -->
 
-  <section>
+  <section id="main">
     <!-- Write your HTML! -->
   </section>
   
