--- a/html.html
+++ b/html.html
@@ -2,42 +2,55 @@
 <!-- @include _header -->
 
 <section class="column">
-	<h2>child: &gt;</h2>
-	<p>ul&gt;li</p>
-	<pre>
+  <h2>child: &gt;</h2>
+  <p>ul&gt;li</p>
+  <pre>
 &lt;ul&gt;
   &lt;li&gt;&lt;/li&gt;
 &lt;/ul&gt;
-	</pre>
+  </pre>
 
-	<h2>sibling: +</h2>
-	<p>h2+p+bq</p>
-		<pre>
+  <h2>sibling: +</h2>
+  <p>h2+p+bq</p>
+  <pre>
 &lt;h2&gt;&lt;/h2&gt;
 &lt;p&gt;&lt;/p&gt;
 &lt;blockquote&gt;&lt;/blockquote&gt;
-		</pre>
+  </pre>
 
-	<h2>climb: ^</h2>
-	<p>ul&gt;li^p</p>
-		<pre>
+  <h2>climb: ^</h2>
+  <p>ul&gt;li^p</p>
+  <pre>
 &lt;ul&gt;
   &lt;li&gt;&lt;/li&gt;
 &lt;/ul&gt;
 &lt;p&gt;&lt;/p&gt;
-		</pre>
+  </pre>
+
+  <h2>Grouping: ()</h2>
+  <p>div>(header>nav)+footer>p</p>
+  <pre>
+&lt;div&gt;
+  &lt;header&gt;
+    &lt;nav&gt;&lt;/nav&gt;
+  &lt;/header&gt;
+  &lt;footer&gt;
+    &lt;p&gt;&lt;/p&gt;
+  &lt;/footer&gt;
+&lt;/div&gt;
+  </pre>
 </section>
 
 <section class="column">
-	<h2>multiplication: *</h2>
-	<p>ul&gt;li*3</p>
-	<pre>
+  <h2>multiplication: *</h2>
+  <p>ul&gt;li*3</p>
+  <pre>
 &lt;ul&gt;
   &lt;li&gt;&lt;/li&gt;
   &lt;li&gt;&lt;/li&gt;
   &lt;li&gt;&lt;/li&gt;
 &lt;/ul&gt;
-	</pre>
+  </pre>
 </section>
 
 <!-- @include _footer -->
