Add attributes and text

--- a/html.html
+++ b/html.html
@@ -51,6 +51,18 @@
   &lt;li&gt;&lt;/li&gt;
 &lt;/ul&gt;
   </pre>
+
+  <h2>Attributes: []</h2>
+  <p>a[title="My anchor"]</p>
+  <pre>
+&lt;a href=&quot;&quot; title=&quot;My anchor&quot;&gt;&lt;/a&gt;
+  </pre>
+
+  <h2>text: {}</h2>
+  <p>a{Click me}</p>
+  <pre>
+&lt;a href=&quot;&quot;&gt;Click me&lt;/a&gt;
+  </pre>
 </section>
 
 <!-- @include _footer -->
