Add in a few more base functions and start a list of common abbreviations

--- a/html.html
+++ b/html.html
@@ -58,11 +58,37 @@
 &lt;a href=&quot;&quot; title=&quot;My anchor&quot;&gt;&lt;/a&gt;
   </pre>
 
-  <h2>text: {}</h2>
+  <h2>Text: {}</h2>
   <p>a{Click me}</p>
   <pre>
 &lt;a href=&quot;&quot;&gt;Click me&lt;/a&gt;
   </pre>
+
+  <h2>Implicit classes</h2>
+  <p>.myclass</p>
+  <pre>
+&lt;div class=&quot;myclass&quot;&gt;&lt;/div&gt;
+  </pre>
+  <p>ul>.myclass</p>
+  <pre>
+&lt;ul&gt;
+  &lt;li class=&quot;myclass&quot;&gt;&lt;/li&gt;
+&lt;/ul&gt;
+  </pre>
 </section>
+
+<section class="column">
+  <h2>Abbreviations:</h2>
+  <p>a</p>
+  <pre>
+&lt;a href=&quot;&quot;&gt;&lt;/a&gt;
+  </pre>
+
+  <p>link:css</p>
+  <pre>
+&lt;link rel=&quot;stylesheet&quot; href=&quot;<span class="selected">style</span>.css&quot;&gt;
+  </pre>
+</section>
+
 
 <!-- @include _footer -->
